src/test/deca/context/valid/declaVariable/floatLeftIntRight.deca
// Description:
//    Déclaration de variables
//
// Résultats:
//    Ligne 11: Variable non déclarée
//
// Historique:
//    Créé le 10/01/2024

{
   float a = 3;
}
